# PGMpp

./: CMakeLists.txt  COPYING.LESSER  README.md
output_img/: output_1.pgm  output_2.pgm
pgm_img/: black_square.pgm  coast.ppm  mona_lisa.pgm
src/: Lab3_full.cpp  Lab3_full_color.cpp  Lab4.cpp  PGMDitherer.h  PGMDitherer_impl.h  PGMGraphics.h  PGMGraphics_impl.h  PGMImage.h  PGMImageException.h  PGMImageFileDeleteException.h  PGMImageFileFormatException.h  PGMImageFileOpenException.h  PGMImageFileReadException.h  PGMImageMemAllocException.h  PGMImageParamsException.h  PGMImage_impl.h  PGMPixel.h  PGMSpace.h  PGMSpace_impl.h
src/examples/: example_1.cpp  example_10.cpp  example_11.cpp  example_12.cpp  example_13.cpp  example_14.cpp  example_15.cpp  example_16.cpp  example_17.cpp  example_18.cpp  example_19.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  example_8.cpp  example_9.cpp
