cmake_minimum_required(VERSION 3.16)
project(PGMpp)

set(CMAKE_CXX_STANDARD 14)

# Demo 1
add_executable(DEMO1 src/examples/example_1.cpp)

# Demo 2
add_executable(DEMO2 src/examples/example_2.cpp)

# Demo 3
add_executable(DEMO3 src/examples/example_3.cpp)

# Demo 4
add_executable(DEMO4 src/examples/example_4.cpp)

# Demo 5
add_executable(DEMO5 src/examples/example_5.cpp)

# Demo 6
add_executable(DEMO6 src/examples/example_6.cpp)

# Demo 7
add_executable(DEMO7 src/examples/example_7.cpp)

# Demo 8
add_executable(DEMO8 src/examples/example_8.cpp)

# Demo 9
add_executable(DEMO9 src/examples/example_9.cpp)

# Demo 10
add_executable(DEMO10 src/examples/example_10.cpp)

# Demo 11
add_executable(DEMO11 src/examples/example_11.cpp)

# Demo 12
add_executable(DEMO12 src/examples/example_12.cpp)

# Demo 13
add_executable(DEMO13 src/examples/example_13.cpp)

# Demo 14
add_executable(DEMO14 src/examples/example_14.cpp)

# Demo 15
add_executable(DEMO15 src/examples/example_15.cpp)

# Demo 16
add_executable(DEMO16 src/examples/example_16.cpp)

# Demo 17
add_executable(DEMO17 src/examples/example_17.cpp)

# Demo 18
add_executable(DEMO18 src/examples/example_18.cpp)

# Demo 19
add_executable(DEMO19 src/examples/example_19.cpp)